Integrated with Tugce's parts.

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,9 @@
 \documentclass[paper=a4,oneside,fontsize=12,parskip=full,titlepage=firstiscover,toc=sectionentrywithdots]{scrartcl}
 
+\usepackage[english]{babel}
+\usepackage[T1]{fontenc}
+\usepackage{microtype}
+\usepackage{csquotes}
 \usepackage{biblatex}
 \usepackage{listings}
 \usepackage{inconsolata}
@@ -14,7 +18,7 @@
     \titlehead{Atılım University\\Department of Computer Engineering}
     \title{Translation from XSD to JSON Schema}
     \subtitle{A short introductory report on conversion of two popular data interchange formats.}
-    \author{Tuğçe Kaman\thanks{M.Sc. candidate in Computer Engineering.} \and Tolga Üstünkök\thanks{Ph.D. candidate in Software Engineering.}}
+    \author{Tuğçe Kaman\thanks{M.Sc. candidate in Computer Engineering at Atılım University.} \and Tolga Üstünkök\thanks{Ph.D. candidate in Software Engineering at Atılım University.}}
     \date{January 12, 2022}
     \publishers{CMPE541 - Advanced Databases\thanks{Authors thank to Dr. Damla TOPALLI for her great support and contributions.}}
     \maketitle
