Conclusions are added.

--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{microtype}
 \usepackage{csquotes}
-\usepackage{biblatex}
+\usepackage[url=false,eprint=false]{biblatex}
 \usepackage{listings}
 \usepackage{inconsolata}
 
