--- a/references.bib
+++ b/references.bib
@@ -87,3 +87,29 @@ title = {{XML Schema Part 0: Primer Second Edition}},
 url = {http://www.w3.org/TR/xmlschema-0/},
 year = {2004}
 }
+@inproceedings{Pezoa2016,
+abstract = {JSON-the most popular data format for sending API requests and responses-is still lacking a standardized schema or meta-data definition that allows the developers to specify the structure of JSON documents. JSON Schema is an attempt to provide a general purpose schema language for JSON, but it is still work in progress, and the formal specification has not yet been agreed upon. Why this could be a problem becomes evident when examining the behaviour of numerous tools for validating JSON documents against this initial schema proposal: Although they agree on most general cases, when presented with the greyer areas of the specification they tend to differ significantly. In this paper we provide the first formal definition of syntax and semantics for JSON Schema and use it to show that implementing this layer on top of JSON is feasible in practice. This is done both by analysing the theoretical aspects of the validation problem and by showing how to set up and validate a JSON Schema for Wikidata, the central storage for Wikimedia.},
+author = {Pezoa, Felipe and Reutter, Juan L. and Suarez, Fernando and Ugarte, Mart{\'{i}}n and Vrgo{\v{c}}, Domagoj},
+booktitle = {25th International World Wide Web Conference, WWW 2016},
+doi = {10.1145/2872427.2883029},
+file = {:home/tustunkok/Documents/Mendeley Desktop/Foundations of JSON schema - Pezoa et al. - 2016.pdf:pdf},
+isbn = {9781450341431},
+mendeley-groups = {CMPE541},
+pages = {263--273},
+publisher = {International World Wide Web Conferences Steering Committee},
+title = {{Foundations of JSON schema}},
+url = {http://dx.doi.org/10.1145/2872427.2883029.},
+year = {2016}
+}
+@misc{JSONSchema,
+mendeley-groups = {CMPE541},
+title = {{JSON Schema | The home of JSON Schema}},
+url = {http://json-schema.org/},
+urldate = {2022-01-14}
+}
+@misc{Copilot,
+mendeley-groups = {CMPE541},
+title = {{GitHub Copilot {\textperiodcentered} Your AI pair programmer}},
+url = {https://copilot.github.com/},
+urldate = {2022-01-14}
+}
