--- a/sections/conclusions.tex
+++ b/sections/conclusions.tex
@@ -1,1 +1,12 @@
 \section{Conclusions}
+The popularity and usefulness of both JSON Schema and XSD make them great
+candidates for data exchange and integrity checkers. However, converting one to
+another can be challenging due to the lack of standardization in JSON Schema.
+There are not many studies that provide such methods in the literature. The ones
+that provide also describe bidirectional conversion methods i.e. from XSD to
+JSON Schema or vice versa. The existing research has aged from 10 to 5 years
+which might be considered a little bit old. There is not much research on the
+utilization of trending machine learning topics to make the conversion. As
+future work, these subjects can be possible candidates. A strong example that
+proves those techniques work on this type of problem can be Github Copilot
+\autocite{Copilot}.
