--- a/sections/methods.tex
+++ b/sections/methods.tex
@@ -1,4 +1,8 @@
 \section{Methods}
+In this section, a summary of the literature on the subject is given. First, a
+generic transşation process is described. Then, more specific studies are
+presented.
+
 \subsection{A Generic Translation Process From XSD to JSON Schema}
 JSON is becoming more and more popular as a data interchange format, but not as
 common as XML, which has recently risen in web service applications. However,
@@ -46,6 +50,9 @@ characteristics, it's difficult to implement all the data dictionary's
 conversion rules, making it impossible to convert all XSD parts.
 
 \subsection{Existing Methods}
+The literature review on the subject yields two studies that are directly
+related to the scope of this report. They are briefly explained in this section.
+
 \subsubsection{From XML Schema to JSON Schema: Translation with CHR}
 Again, since it seems impossible to convert JSON and XML formats to each other
 without error, even though, Schema languages exist to specify the structure of
